--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     <section class="image-gallery">
         <h2 class="main-heading" data-aos="fade-up" data-aos-duration="2000">Picture Gallery</h2>
+        <div class="underine" data-aos="fade-up" data-aos-duration="2000"></div>
 
         <div class="gallery-container">
             <div class="gallery-section">
@@ -143,6 +144,8 @@
                 </div>
             </div>
 
+            <hr>
+
             <div class="gallery-section">
                 <h3 data-aos="fade-right" data-aos-duration="2000">Model United Nations :</h3>
                 <div class="gallery">
@@ -168,6 +171,9 @@
                         data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 </div>
             </div>
+
+            <hr>
+
 
             <div class="gallery-section">
                 <h3 data-aos="fade-right" data-aos-duration="2000">Education :</h3>
@@ -223,6 +229,9 @@
                         data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 </div>
             </div>
+
+            <hr>
+
 
             <div class="gallery-section">
                 <h3 data-aos="fade-right" data-aos-duration="2000">College :</h3>
